# sample-bindings

./: .gitignore  .gitmodules  README.md
.github/workflows/: python.yml
R/sampleBindings/: DESCRIPTION  NAMESPACE
R/sampleBindings/R/: rectangle.R
R/sampleBindings/src/: Makevars  RcppExports.cpp  Rectangle.cpp
R/sampleBindings/tests/: testthat.R
R/sampleBindings/tests/testthat/: test-rectangle.R
docs/: outline.pptx
pypkg/: setup.py
pypkg/sample_bindings/: __init__.py  main.cpp  pybind_module.cpp
pypkg/sample_bindings/cy_rect/: rectangle.cpp  rectangle.pxd  rectangle.pyx
pypkg/tests/: test_main.py  test_pybind_module.py  test_rectangle.py
python/: CMakeLists.txt  OLD_setup.py  gather_files.py  pyproject.toml  setup.py
python/sample_bindings/: __init__.py  carma_module.cpp
python/sample_bindings/_Rectangle/: CMakeLists.txt  _Rectangle.cpp  _Rectangle.pxd  _Rectangle.pyx
python/sample_bindings/cy_rect/: __init__.py
python/sample_bindings/src2/include/: arma_include.h
python/tests/: test_pybind_module.py  test_rectangle.py
src/: maths.cpp
